# Ultimate-Sacrifice

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml  requirements.txt  run.bat  run.ps1
scripts/: smoke_test.py
src/ultimate_sacrifice/: __init__.py  __main__.py  app.py  config.py
src/ultimate_sacrifice/ai/: __init__.py  anthropic_api.py  assessor.py  base.py  cache.py  claude_cli.py  ollama.py  prompt.py
src/ultimate_sacrifice/analysis/: __init__.py  advisor.py  advisor_prompt.py  report.py
src/ultimate_sacrifice/cleanup/: __init__.py  deleter.py
src/ultimate_sacrifice/scanner/: __init__.py  heuristics.py  model.py  walker.py
src/ultimate_sacrifice/tui/: __init__.py  advisor.py  screens.py  theme.py
tests/: test_advisor.py  test_ai_parsing.py  test_cache.py  test_deleter.py  test_heuristics.py  test_scanner.py
